infrastructure/kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-generator-backend
  namespace: word-generator
  labels:
    app: random-word-generator
    component: backend
    tier: api
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3000'
    prometheus.io/path: '/metrics'
    service.kubernetes.io/topology-aware-hints: 'auto'
    service.beta.kubernetes.io/aws-load-balancer-type: 'nlb'
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http-api
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: metrics
  selector:
    app: random-word-generator
    component: backend
  sessionAffinity: None
  publishNotReadyAddresses: false
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
